apps/gallery/style/VideoPlayer.css
/* styles for the video player and poster image */
.videoPoster, .videoPlayer {
  position: absolute;
  left: 0; /* we position it with a transform */
  top:0;
  transform-origin: 0 0;
}

/* video player controls */
.videoPlayerControls {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: 0;
  padding: 0;
}

.videoPlayerPlayButton {
  position: absolute;
  width: 10.6rem;
  height: 10.6rem;
  left: calc(50% - 5.3rem);
  top: calc(50% - 5.3rem);
  background: url("images/video_play_button.png") no-repeat center center / 10.6rem,
              url("images/video_play_normal.png") no-repeat center center / 10.6rem;
  border-width: 0;
}

.videoPlayerPlayButton:active {
  background: url("images/video_play_button.png") no-repeat center center / 10.6rem,
              url("images/video_play_focus.png") no-repeat center center / 10.6rem;
}

.videoPlayerPlayButton.hidden {
  opacity: 0;
}

.videoPlayerFooter {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 5rem;
  margin: 0;
  padding: 0;
  background-color: rgba(0, 0, 0, 0.3);
  overflow: hidden;
  opacity: 1;
  transition: opacity 0.5s;
  -moz-user-select: none;
}

.videoPlayerFooter.hidden {
  opacity: 0;
  pointer-events: none;
}

.videoPlayerPauseButton {
  position: absolute;
  width: 10rem;
  height: 10rem;
  padding: 0;
  margin: 0;
  background: url("images/video_pause_button.png") no-repeat center center / 9.6rem,
              rgba(0,0,0,.5);
  border-radius: 5.3rem;
  border: solid #ccc 0.3rem;
  top: -2.5rem;
  left: 1rem;
}

.videoPlayerPauseButton:active {
  background: url("images/video_pause_button.png") no-repeat center center / 9.6rem,
              url("images/video_play_focus.png") no-repeat center center / 10.6rem;
}

button::-moz-focus-inner {
  padding: 0;
  border: none;
}

/* time slider */
.videoPlayerSlider {
  position: absolute;
  left: 11rem;
  top: 0;
  right: 0;
  height: 100%;
}

.videoPlayerSlider > span {
  display: block;
  width: 4.5rem;
  position: absolute;
  color: white;
  height: 100%;
  line-height: 5rem;
  text-align: center;
  font-size: 1.5rem;
}

.videoPlayerElapsedText {
  left: 1rem;
}

.videoPlayerDurationText {
  right: 1rem;
}

.videoPlayerProgress {
  position: absolute;
  top: 0;
  left: 7rem;
  right: 7rem;
  height: 100%;
}

.videoPlayerProgress > div {
  position: absolute;
  pointer-events: none;
}

.videoPlayerElapsedBar, .videoPlayerBackgroundBar {
  height: 0.4rem;
  width: 0%;
  top: 50%;
  margin-top: -0.2rem;
  border-radius: 0.6rem;
}

.videoPlayerElapsedBar {
  background-color: #0ac;
}

.videoPlayerBackgroundBar {
  background-color: #333;
  width: 100%;
}

.videoPlayerPlayHead {
  display: block;
  height: 2rem;
  width: 2.5rem;
  border-radius: 2.5rem;
  background-color: white;
  top: 50%;
  margin: -1rem 0 0 -1.2rem;
}

