Bug 906894 - [Gallery] Video pause button not centered

--- a/apps/gallery/style/VideoPlayer.css
+++ b/apps/gallery/style/VideoPlayer.css
@@ -63,16 +63,16 @@
   height: 10rem;
   padding: 0;
   margin: 0;
-  background: url("images/video_pause_button.png") no-repeat center center / 9.6rem,
-              rgba(0,0,0,.5);
   border-radius: 5.3rem;
   border: solid #ccc 0.3rem;
   top: -2.5rem;
   left: 1rem;
+  background: url("images/video_pause_button.png") no-repeat center center / 4.4rem 5.7rem,
+              rgba(0,0,0,.5);
 }
 
 .videoPlayerPauseButton:active {
-  background: url("images/video_pause_button.png") no-repeat center center / 9.6rem,
+  background: url("images/video_pause_button.png") no-repeat center center / 4.4rem 5.7rem,
               url("images/video_play_focus.png") no-repeat center center / 10.6rem;
 }
 
